--- a/react-app/package.json
+++ b/react-app/package.json
@@ -13,11 +13,14 @@
     "os": "^0.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-native": "^0.67.3",
+    "react-native-web": "^0.17.7",
     "react-scripts": "4.0.0",
     "stream": "^0.0.2",
     "url": "^0.11.0",
     "web-vitals": "^2.1.4",
-    "web3": "^1.7.1"
+    "web3": "^1.7.1",
+    "web3uikit": "^0.1.88"
   },
   "scripts": {
     "start": "react-scripts start",
