--- a/react-app/package.json
+++ b/react-app/package.json
@@ -16,6 +16,7 @@
     "react-native": "^0.67.3",
     "react-native-web": "^0.17.7",
     "react-scripts": "4.0.0",
+    "solc": "^0.8.13",
     "stream": "^0.0.2",
     "url": "^0.11.0",
     "web-vitals": "^2.1.4",
